--- a/js练手/试题1.html
+++ b/js练手/试题1.html
@@ -61,8 +61,16 @@
 // 			}
 
 //  document.write ("3");
-			 document.write ("3</br>5");
+			 // document.write ("\u0065");
 // 			 document.write ("5");//可以换行
+/* (function () {
+	console.log(1)
+	setTimeout(function () {
+		console.log(2)
+	},1000)
+}) */
+var arr1 = 'john'.split('');
+console.log(arr1.length)
 		</script>
 	</body>
 </html>
